--- a/src/main/resources/messages_pt.properties
+++ b/src/main/resources/messages_pt.properties
@@ -1,2 +1,9 @@
+Size.attendee.name = Nome deve ter entre {2} e {1} caracteres
+Email = Endereço de e-mail não válido
+NotEmpty = Campo não pode estar nulo
+
+Phone=Número inválido
+
 attendee.name = Nome
 attendee.email.address = E-mail
+attendee.phone=Telefone
